Add tierlist routes
