# backend/docs/openapi.yaml
@@ -3,7 +3,19 @@ info:
   title: Chat's TierList
   version: 0.1.0
 components:
-  schemas: {}
+  schemas:
+    def-0:
+      type: object
+      properties:
+        statusCode:
+          type: number
+        code:
+          type: string
+        error:
+          type: string
+        message:
+          type: string
+      title: HttpError
 paths:
   /login/callback:
     get:
@@ -50,6 +62,7 @@ paths:
           description: Default Response
   /tierlist:
     put:
+      summary: Overwrite entire tier list
       tags:
         - Tier List
       requestBody:
@@ -67,44 +80,237 @@ paths:
                     - items
                   properties:
                     tiers:
-                      type: array
-                      items:
+                      type: object
+                      maxProperties: 50
+                      additionalProperties:
                         type: object
                         required:
-                          - name
                           - color
                         properties:
-                          name:
-                            type: string
-                            minLength: 1
                           color:
                             type: string
-                      maxItems: 50
+                            minLength: 1
+                            description: Background color of the tier
                     items:
-                      type: array
-                      items:
+                      type: object
+                      maxProperties: 500
+                      additionalProperties:
                         type: object
-                        required:
-                          - name
-                          - image_url
                         properties:
-                          name:
+                          image_url:
                             type: string
                             minLength: 1
-                          image_url:
-                            anyOf:
-                              - type: string
-                              - type: "null"
-                      maxItems: 500
+                            description: An optional image URL
         required: true
       responses:
-        "200":
-          description: Default Response
+        "204":
+          description: Successfully overwrote tier list
+    patch:
+      summary: Update settings on the tier list
+      tags:
+        - Tier List
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                focus:
+                  type: string
+                  minLength: 1
+                  description: Name of the item to focus
+                is_voting:
+                  type: boolean
+                  description: Determine whether votes should be parsed or ignored
+      responses:
+        "204":
+          description: Successfully updated settings on the tier list
+        "404":
+          description: Focus target does not exist
           content:
             application/json:
               schema:
-                enum:
-                  - OK
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                description: Focus target does not exist
+  /tierlist/tier:
+    post:
+      summary: Add a new tier
+      tags:
+        - Tier List
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+                - color
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  description: Name of the tier
+                color:
+                  type: string
+                  minLength: 1
+                  description: Background color of the tier
+        required: true
+      responses:
+        "201":
+          description: Successfully added tier
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                description: Conflict
+  /tierlist/tier/{name}:
+    patch:
+      summary: Update an existing tier
+      tags:
+        - Tier List
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  description: Name of the tier
+                color:
+                  type: string
+                  minLength: 1
+                  description: Background color of the tier
+      parameters:
+        - schema:
+            type: string
+            minLength: 1
+          in: path
+          name: name
+          required: true
+          description: Name of the tier
+      responses:
+        "204":
+          description: Successfully updated tier
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                description: Conflict
+  /tierlist/item:
+    post:
+      summary: Adds a new item
+      tags:
+        - Tier List
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  description: Name of the item
+                image_url:
+                  type: string
+                  minLength: 1
+                  description: Image url of the item
+        required: true
+      responses:
+        "201":
+          description: Successfully added item
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                description: Conflict
+  /tierlist/item/{name}:
+    patch:
+      summary: Updates an item
+      tags:
+        - Tier List
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  description: Name of the item
+                image_url:
+                  type: string
+                  minLength: 1
+                  description: Image url of the item
+      parameters:
+        - schema:
+            type: string
+            minLength: 1
+          in: path
+          name: name
+          required: true
+          description: Name of the item
+      responses:
+        "204":
+          description: Successfully updated item
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+                description: Conflict
+    delete:
+      summary: Deletes an item
+      tags:
+        - Tier List
+      parameters:
+        - schema:
+            type: string
+            minLength: 1
+          in: path
+          name: name
+          required: true
+          description: Name of the item
+      responses:
+        "204":
+          description: Successfully deleted item
 servers:
   - url: http://localhost:3000
     description: Development server
